fixes, remove range handler
